--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
               <artifactId>h2</artifactId>
               <scope>runtime</scope>
           </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>3.5.5</version>
+        </dependency>
     </dependencies>
 
     <build>
